#16 Implement javac annotation processor enforcement